# duration-unit-lookup

./: .gitignore  Cargo.toml  README.md  build.rs
gen-match-prefix/: Cargo.toml  main.rs
gen-simd/: Cargo.toml
gen-simd/src/: main.rs
gendfa/: Cargo.toml  main.rs
src/: aho.rs  bench.rs  by_gencdfa1.rs  by_gendfa1.rs  by_simd.rs  by_trie1.rs  by_trie2.rs  by_trie3.rs  by_trie4.rs  by_trie5.rs  gencdfa1.c  gendfa1.rs  hashify.rs  lib.rs  one_big_match.rs  one_big_match_prefix.rs  one_big_match_prefix_gen.rs  phf.rs  trie1.rs  trie2.rs  trie3.rs  trie4.rs  trie5.rs
